# calisthenics

./: .gitignore  README.md  about.html  build.sh  calisthenics.cabal  flake.nix  index.html  package.json  site.hs  tailwind.config.js
css/: code.css  input.css  style.css
docs/: about.html  archive.html  code-example.html  getting-started.html  index.html  mobility-matters.html  push-up-progressions.html  reading-list.html
docs/css/: input.css  style.css
docs/posts/: 2024-01-15-getting-started.html  2024-01-16-code-example.html  2024-02-03-push-up-progressions.html  2024-03-10-mobility-matters.html  code-example.html
docs/tags/: beginner.html  calisthenics.html  css.html  fitness.html  flexibility.html  fundamentals.html  getting-started.html  haskell.html  html.html  injury-prevention.html  javascript.html  mobility.html  programming.html  progressions.html  push-ups.html  rust.html  upper-body.html
posts/: 2024-01-15-getting-started.typ  2024-02-03-push-up-progressions.typ  mobility-matters.typ
templates/: default.html
