cabal-version:      3.0
name:               calisthenics
version:            0.1.0.0
synopsis:           Static blog site built with Hakyll
description:        A static site generator using Hakyll with Typst support for blog posts
license:            MIT
license-file:       LICENSE
author:             Blog Author
maintainer:         author@example.com
category:           Web
build-type:         Simple

executable site
    main-is:            site.hs
    build-depends:      
        base >= 4.16,
        hakyll >= 4.16,
        process >= 1.6,
        filepath >= 1.4,
        directory >= 1.3,
        containers >= 0.6,
        time >= 1.9
    default-language:   Haskell2010
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
